--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main class="container"></main>
   <script src="js/block.js"></script>
   <script src="js/ball.js"></script>
-  <script src="js/ball.js"></script>
+  <script src="js/game.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
