--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div style="display:none;">
+      <img id="source" src="/personaje.png">
+    </div>
   <main class="container"></main>
   <script src="js/block.js"></script>
   <script src="js/ball.js"></script>
