--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <div style="display:none;">
-      <img id="source" src="./personaje.png">
+      <img id="imagePj1" src="./personaje.png">
+      <img id="imagePj2" src="./personaje2.png">
     </div>
   <main class="container"></main>
   <script src="js/block.js"></script>
