--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Hello, world!</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -14,7 +15,11 @@
       <img id="imagePj2" src="./personaje2.png">
     </div>
   <main class="container"></main>
-  <script src="js/block.js"></script>
+  <script src="js/block.js">
+  var he
+  fu
+
+  </script>
   <script src="js/ball.js"></script>
   <script src="js/game.js"></script>
   <script src="js/main.js"></script>
