--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
     <div style="display:none;">
-      <img id="imagePj1" src="./personaje.png">
-      <img id="imagePj2" src="./personaje2.png">
+      <img id="spriteImage" src="./sprite-pj.png">
+      <img id="spriteImageLeft" src="./spritePjLeft.png">
+      <img id="spriteImageRight" src="./spritePjRight.png">
     </div>
   <main class="container"></main>
   <script src="js/block.js">
