--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 
 <body>
     <div style="display:none;">
-      <img id="spriteImage" src="./sprite-pj.png">
-      <img id="spriteImageLeft" src="./spritePjLeft.png">
-      <img id="spriteImageRight" src="./spritePjRight.png">
+      <img id="block-bg" src="./block-bg.png">
+      <img id="block-bg2" src="./block-bg-2.png">
+      <img id="spritePj1" src="./sprite-pj.png">
+      <img id="spritePj1Left" src="./spritePjLeft.png">
+      <img id="spritePj1Right" src="./spritePjRight.png">
+      <img id="spritePj2" src="./sprite-pj-2.png">
+      <img id="spritePj2Left" src="./spritePj2Left.png">
+      <img id="spritePj2Right" src="./spritePj2Right.png">
     </div>
   <main class="container"></main>
-  <script src="js/block.js">
-  var he
-  fu
-
-  </script>
+  <script src="js/block.js"></script>
   <script src="js/ball.js"></script>
   <script src="js/game.js"></script>
   <script src="js/main.js"></script>
