--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Hello, world!</title>
+  <title>Vegetables Party</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -19,9 +19,11 @@
       <img id="spritePj2" src="./sprite-pj-2.png">
       <img id="spritePj2Left" src="./spritePj2Left.png">
       <img id="spritePj2Right" src="./spritePj2Right.png">
+      <img id="imageEnemie" src="./knive.png">
     </div>
   <main class="container"></main>
   <script src="js/block.js"></script>
+  <script src="js/enemie.js"></script>
   <script src="js/ball.js"></script>
   <script src="js/game.js"></script>
   <script src="js/main.js"></script>
