--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 
 <body>
     <div style="display:none;">
-      <img id="block-bg" src="./block-bg.png">
-      <img id="block-bg2" src="./block-bg-2.png">
-      <img id="spritePj1" src="./sprite-pj.png">
-      <img id="spritePj1Left" src="./spritePjLeft.png">
-      <img id="spritePj1Right" src="./spritePjRight.png">
-      <img id="spritePj2" src="./sprite-pj-2.png">
-      <img id="spritePj2Left" src="./spritePj2Left.png">
-      <img id="spritePj2Right" src="./spritePj2Right.png">
-      <img id="imageEnemie" src="./knive.png">
+      <img id="block-bg" src="./images/block-bg.png">
+      <img id="block-bg2" src="./images/block-bg-2.png">
+      <img id="spritePj1" src="./images/sprite-pj.png">
+      <img id="spritePj1Left" src="./images/spritePjLeft.png">
+      <img id="spritePj1Right" src="./images/spritePjRight.png">
+      <img id="spritePj2" src="./images/sprite-pj-2.png">
+      <img id="spritePj2Left" src="./images/spritePj2Left.png">
+      <img id="spritePj2Right" src="./images/spritePj2Right.png">
+      <img id="imageEnemie" src="./images/knive.png">
     </div>
   <main class="container"></main>
   <script src="js/block.js"></script>
   <script src="js/enemie.js"></script>
-  <script src="js/ball.js"></script>
+  <script src="js/player.js"></script>
   <script src="js/game.js"></script>
   <script src="js/main.js"></script>
 </body>
