--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-    <div style="display:none;">
+  <div class="wrapper">
+    <div class="sliding-background">
+    </div>
+  </div>
+  <div style="display:none;">
       <img id="block-bg" src="./images/block-bg.png">
       <img id="block-bg2" src="./images/block-bg-2.png">
       <img id="spritePj1" src="./images/sprite-pj.png">
@@ -20,8 +24,9 @@
       <img id="spritePj2Left" src="./images/spritePj2Left.png">
       <img id="spritePj2Right" src="./images/spritePj2Right.png">
       <img id="imageEnemie" src="./images/knive.png">
-    </div>
+  </div>
   <main class="container"></main>
+    
   <script src="js/block.js"></script>
   <script src="js/enemie.js"></script>
   <script src="js/player.js"></script>
