--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css?family=Nova+Round" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
